# aws-robomaker-sample-application-persondetection

simulation_ws/src/person_detection_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/person_detection_simulation/config/: kvs_config.yaml
simulation_ws/src/person_detection_simulation/launch/: h264_video_encoder.launch.py  kinesis_video_streamer.launch.py  navigation2.launch.py  route_manager.launch.py  small_house_turtlebot_navigation.launch.py
simulation_ws/src/person_detection_simulation/routes/: route.yaml
